enable massive caching of style span contents (set of style classes) this reduces memory usage